syntax = "proto3";

package pb;

option go_package = "/pb";

import "google/protobuf/timestamp.proto";

message PostInfo {
    string post_id = 1;
    string user_id = 2;
    string user_name = 3;
    string title = 4;
    string content = 5;
    uint32 views = 6;
    uint32 likes = 7;
    string image = 8;
    repeated string tags = 10;
    google.protobuf.Timestamp created_at = 11;
    google.protobuf.Timestamp updated_at = 12;
}

message GetPostRequest {
    string post_id = 1;
}

message GetPostResponse {
    PostInfo post = 1;
}

message ListPostRequest {
    int64 limit = 1;
    int64 skip = 2;
    optional string filter = 3;
}

message ListPostResponse {
    int64 total = 1;
    repeated PostInfo posts = 2;
}

message ListPostByUserIDRequest {
    string user_id = 1;
    int64 limit = 2;
    int64 skip = 3;
}

message ListPostByUserIDResponse {
    int64 total = 1;
    repeated PostInfo posts = 2;
}

message CreatePostRequest {
    string title = 1;
    string content = 2;
    string image = 3;
    repeated string tags = 4;
}

message CreatePostResponse {
    string post_id = 1;
}

message UpdatePostContentRequest {
    string post_id = 1;
    string title = 2;
    string content = 3;
    string image = 4;
    repeated string tags = 5;
}

message UpdatePostContentResponse {}

message UpdatePostLikesRequest {
    string post_id = 1;
}

message UpdatePostLikesResponse {}

message UpdatePostViewsRequest {
    string post_id = 1;
}

message UpdatePostViewsResponse {}

message DeletePostRequest {
    string post_id = 1;
}

message DeletePostResponse {}
