syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "modules/api/proto/post_message.proto";

option go_package = "/pb";

service Post {
    rpc GetPost(GetPostRequest) returns (GetPostResponse) {
        option (google.api.http) = {
            get: "/posts/{post_id}"
            response_body: "post"
        };
    }

    rpc ListPost(ListPostRequest) returns (ListPostResponse) {
        option (google.api.http) = {
            get: "/posts"
        };
    }

    rpc ListPostByUserID(ListPostByUserIDRequest) returns (ListPostByUserIDResponse) {
        option (google.api.http) = {
            get: "/posts/byUserID/{user_id}"
        };
    }

    rpc CreatePost(CreatePostRequest) returns (CreatePostResponse) {
        option (google.api.http) = {
            post: "/posts"
            body: "*"
            response_body: "*"
        };
    }

    rpc UpdatePostContent(UpdatePostContentRequest) returns (UpdatePostContentResponse) {
        option (google.api.http) = {
            put: "/posts/content/{post_id}"
            body: "*"
            response_body: "*"
        };
    }

    rpc UpdatePostLikes(UpdatePostLikesRequest) returns (UpdatePostLikesResponse) {
        option (google.api.http) = {
            put: "/posts/likes/{post_id}"
            response_body: "*"
        };
    }

    rpc UpdatePostViews(UpdatePostViewsRequest) returns (UpdatePostViewsResponse) {
        option (google.api.http) = {
            put: "/posts/views/{post_id}"
            response_body: "*"
        };
    }

    rpc DeletePost(DeletePostRequest) returns (DeletePostResponse) {
        option (google.api.http) = {
            delete: "/posts/{post_id}"
            response_body: "*"
        };
    }
}
